--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </center>
     favorites list<br>
     chats<br>
-    <img src="wuh.png">
+    <img src="wuh.png" class="wuh">
     </div>
 <nav id="topban">
 <div class="navigation">
