pics fit on screen now

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CRAIGSLIST</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,6 +16,7 @@
     </form>
 <div id="leftsection">   
     <h1 id="logo"> <img class="peace" src="peace.png" width="30" alt="logo"> craigslist</h1>
+    <img class="peace2" src="peace.png" width="40" alt="logo">
     <center><button class="listbutt">+ create a listing!!</button><br></center>
     <center><br><table id="cal">
         <tbody>
@@ -91,31 +92,31 @@
 <div id="products">
     SHOP SALES <br>
     <div class="images">
-    <div><img src="car.png"></div>
-    <div><img src="car.png"></div>
-    <div><img src="car.png"></div>
-    <div><img src="car.png"></div>
+    <div><img src="car.png" class="pic"></div>
+    <div><img src="car.png"class="pic"></div>
+    <div><img src="car.png"class="pic"></div>
+    <div><img src="car.png"class="pic"></div>
         </div>
     JOIN A COMMUNITY<br>
     <div class="images">
-        <div><img src="car.png"></div>
-        <div><img src="car.png"></div>
-        <div><img src="car.png"></div>
-        <div><img src="car.png"></div>
+        <div><img src="car.png"class="pic"></div>
+        <div><img src="car.png"class="pic"></div>
+        <div><img src="car.png"class="pic"></div>
+        <div><img src="car.png"class="pic"></div>
                 </div>
     FIND A JOB<br>
     <div class="images">
-        <div><img src="car.png"></div>
-        <div><img src="car.png"></div>
-        <div><img src="car.png"></div>
-        <div><img src="car.png"></div>
+        <div><img src="car.png"class="pic"></div>
+        <div><img src="car.png"class="pic"></div>
+        <div><img src="car.png"class="pic"></div>
+        <div><img src="car.png"class="pic"></div>
                 </div>
 SHARE YOUR VOICE<br>
 <div class="images">
-<div><img src="car.png"></div>
-                    <div><img src="car.png"></div>
-                    <div><img src="car.png"></div>
-                    <div><img src="car.png"></div>
+<div><img src="car.png"class="pic"></div>
+                    <div><img src="car.png"class="pic"></div>
+                    <div><img src="car.png"class="pic"></div>
+                    <div><img src="car.png"class="pic"></div>
                             </div>
 </div>
 </body>
